fixed bug no-wrap safari

--- a/src/scss/blocks/exhibition.scss
+++ b/src/scss/blocks/exhibition.scss
@@ -45,7 +45,7 @@
     font-weight: 400;
     line-height: 29px;
     position: absolute;
-    text-wrap: nowrap;
+    white-space: nowrap;
   }
   &__text1{
 
